[developing] continiue file handlers implementation | to-do finish file handlers
